--- a/roles/bifrost/templates/ansible_inventory.yml.j2
+++ b/roles/bifrost/templates/ansible_inventory.yml.j2
@@ -2,6 +2,7 @@
 all:
   children:
 {% for role in roles | sort %}
+{% if roles[role]| length > 1 %}
     {{ role }}:
       hosts:
 {% for name in roles[role] | sort %}
@@ -12,14 +13,5 @@ all:
           ansible_user: root
 {% endif %}
 {% endfor %}
-{% endfor %}
-    xci_nodes:
-      hosts:
-{% for name in xci_nodes_list | sort  %}
-{% if name in nodes_d and name in nodes_index %}
-        {{ name }}:
-          index: {{ nodes_index[name] }}
-          ansible_host: {{ pxe_net.network| ip_add( idf.xci.ip_shift + nodes_index[name]) }}
-          ansible_user: root
 {% endif %}
 {% endfor %}
